--- a/single/src/main/resources/messages/messages_zh_CN.properties
+++ b/single/src/main/resources/messages/messages_zh_CN.properties
@@ -1,3 +1,5 @@
-i18n.status.success=??
-i18n.status.error=??
-i18n.status.error.abnormal=??????
+default.status.success=success
+default.status.error=error
+default.status.error.abnormal=abnormal
+
+authorize.nickname.empty=nickname empty
