--- a/single/src/main/resources/messages/messages.properties
+++ b/single/src/main/resources/messages/messages.properties
@@ -1,3 +1,10 @@
-i18n.status.success=success
-i18n.status.error=error
-i18n.status.error.abnormal=abnormal
+default.status.success=success
+default.status.error=error
+default.status.error.abnormal=abnormal
+
+authorize.nickname.empty=nickname empty
+authorize.account.empty=account empty
+authorize.account.not_exist=account not exist
+authorize.password.empty=password empty
+authorize.password.error=password error
+
