--- a/single/src/main/resources/messages/messages_en_US.properties
+++ b/single/src/main/resources/messages/messages_en_US.properties
@@ -1,3 +1,5 @@
-i18n.status.success=success
-i18n.status.error=error
-i18n.status.error.abnormal=abnormal
+default.status.success=success
+default.status.error=error
+default.status.error.abnormal=abnormal
+
+authorize.nickname.empty=nickname empty
